--- a/trunk/scanner.lfm
+++ b/trunk/scanner.lfm
@@ -1,22 +1,22 @@
 object ScannerForm: TScannerForm
   Left = 213
-  Height = 299
+  Height = 339
   Top = 179
-  Width = 320
+  Width = 344
   ActiveControl = PageControl1
   Caption = 'Scanner settings'
-  ClientHeight = 299
-  ClientWidth = 320
+  ClientHeight = 339
+  ClientWidth = 344
   OnCreate = FormCreate
   Position = poMainFormCenter
-  LCLVersion = '0.9.29'
+  LCLVersion = '1.0.1.3'
   object OKButton: TBitBtn
     AnchorSideLeft.Control = PageControl1
     AnchorSideLeft.Side = asrCenter
     AnchorSideBottom.Side = asrBottom
-    Left = 123
+    Left = 135
     Height = 30
-    Top = 257
+    Top = 297
     Width = 75
     Anchors = [akLeft, akBottom]
     Caption = '&OK'
@@ -27,22 +27,22 @@ object ScannerForm: TScannerForm
   end
   object PageControl1: TPageControl
     Left = 0
-    Height = 241
+    Height = 281
     Top = 0
-    Width = 320
+    Width = 344
     ActivePage = ScanSheet1
     Anchors = [akTop, akLeft, akRight, akBottom]
     TabIndex = 0
     TabOrder = 1
     object ScanSheet1: TTabSheet
       Caption = 'Scanner'
-      ClientHeight = 214
-      ClientWidth = 318
+      ClientHeight = 252
+      ClientWidth = 340
       object ModeComboBox: TComboBox
-        Left = 155
-        Height = 27
-        Top = 86
-        Width = 148
+        Left = 156
+        Height = 25
+        Top = 125
+        Width = 170
         Anchors = [akTop, akLeft, akRight]
         Enabled = False
         ItemHeight = 0
@@ -50,9 +50,9 @@ object ScannerForm: TScannerForm
       end
       object DeviceComboBox: TComboBox
         Left = 20
-        Height = 29
+        Height = 27
         Top = 32
-        Width = 284
+        Width = 306
         Anchors = [akTop, akLeft, akRight]
         ItemHeight = 0
         OnChange = DeviceComboBoxChange
@@ -61,9 +61,9 @@ object ScannerForm: TScannerForm
       end
       object ResolutionComboBox: TComboBox
         Left = 155
-        Height = 29
-        Top = 131
-        Width = 149
+        Height = 23
+        Top = 170
+        Width = 171
         Anchors = [akTop, akLeft, akRight]
         ItemHeight = 0
         ItemIndex = 1
@@ -81,9 +81,9 @@ object ScannerForm: TScannerForm
         AnchorSideTop.Control = ModeComboBox
         AnchorSideTop.Side = asrCenter
         AnchorSideRight.Control = ModeComboBox
-        Left = 106
-        Height = 18
-        Top = 90
+        Left = 107
+        Height = 16
+        Top = 129
         Width = 34
         Anchors = [akTop, akRight]
         BorderSpacing.Right = 15
@@ -94,10 +94,10 @@ object ScannerForm: TScannerForm
         AnchorSideTop.Control = ResolutionComboBox
         AnchorSideTop.Side = asrCenter
         AnchorSideRight.Control = ResolutionComboBox
-        Left = 74
-        Height = 18
-        Top = 136
-        Width = 66
+        Left = 73
+        Height = 16
+        Top = 173
+        Width = 67
         Anchors = [akTop, akRight]
         BorderSpacing.Right = 15
         Caption = 'Resolution'
@@ -108,8 +108,8 @@ object ScannerForm: TScannerForm
         AnchorSideTop.Side = asrCenter
         AnchorSideRight.Control = CounterSpinEdit
         Left = 88
-        Height = 18
-        Top = 177
+        Height = 16
+        Top = 216
         Width = 52
         Anchors = [akTop, akRight]
         BorderSpacing.Right = 15
@@ -118,23 +118,44 @@ object ScannerForm: TScannerForm
       end
       object CounterSpinEdit: TSpinEdit
         Left = 155
-        Height = 25
-        Top = 174
+        Height = 23
+        Top = 213
         Width = 148
         MaxValue = 30000
         TabOrder = 3
       end
+      object SourceComboBox: TComboBox
+        Left = 155
+        Height = 27
+        Top = 77
+        Width = 171
+        Anchors = [akTop, akLeft, akRight]
+        ItemHeight = 0
+        Style = csDropDownList
+        TabOrder = 4
+      end
+      object Label8: TLabel
+        AnchorSideRight.Control = SourceComboBox
+        Left = 94
+        Height = 16
+        Top = 84
+        Width = 46
+        Anchors = [akTop, akRight]
+        BorderSpacing.Right = 15
+        Caption = 'Source'
+        ParentColor = False
+      end
     end
     object ScanSheet2: TTabSheet
       Caption = 'Page size'
-      ClientHeight = 214
-      ClientWidth = 318
+      ClientHeight = 252
+      ClientWidth = 340
       object Label3: TLabel
         AnchorSideTop.Control = WidthSpinEdit
         AnchorSideTop.Side = asrCenter
         AnchorSideRight.Control = WidthSpinEdit
         Left = 72
-        Height = 18
+        Height = 16
         Top = 31
         Width = 40
         Anchors = [akTop, akRight]
@@ -147,7 +168,7 @@ object ScannerForm: TScannerForm
         AnchorSideTop.Side = asrCenter
         AnchorSideRight.Control = HeightSpinEdit
         Left = 67
-        Height = 18
+        Height = 16
         Top = 69
         Width = 47
         Anchors = [akTop, akRight]
@@ -157,7 +178,7 @@ object ScannerForm: TScannerForm
       end
       object WidthSpinEdit: TSpinEdit
         Left = 127
-        Height = 25
+        Height = 23
         Top = 28
         Width = 80
         MaxValue = 1000
@@ -168,7 +189,7 @@ object ScannerForm: TScannerForm
       end
       object HeightSpinEdit: TSpinEdit
         Left = 129
-        Height = 25
+        Height = 23
         Top = 66
         Width = 78
         MaxValue = 1000
@@ -181,7 +202,7 @@ object ScannerForm: TScannerForm
         AnchorSideLeft.Control = WidthSpinEdit
         AnchorSideLeft.Side = asrBottom
         Left = 217
-        Height = 18
+        Height = 16
         Top = 31
         Width = 27
         BorderSpacing.Left = 10
@@ -194,7 +215,7 @@ object ScannerForm: TScannerForm
         AnchorSideTop.Control = HeightSpinEdit
         AnchorSideTop.Side = asrCenter
         Left = 217
-        Height = 18
+        Height = 16
         Top = 69
         Width = 27
         BorderSpacing.Left = 10
@@ -203,7 +224,7 @@ object ScannerForm: TScannerForm
       end
       object PaperFormatBox: TComboBox
         Left = 71
-        Height = 27
+        Height = 25
         Top = 116
         Width = 136
         ItemHeight = 0
