--- a/trunk/MainUI.lfm
+++ b/trunk/MainUI.lfm
@@ -5,7 +5,7 @@ object MainForm: TMainForm
   Width = 1024
   ActiveControl = ListboxPanel
   Caption = 'Ocrivist'
-  ClientHeight = 697
+  ClientHeight = 695
   ClientWidth = 1024
   Icon.Data = {
     BE1000000000010001002020000001002000A810000016000000280000002000
@@ -153,12 +153,12 @@ object MainForm: TMainForm
   WindowState = wsMaximized
   object ListboxPanel: TPanel
     Left = 0
-    Height = 636
+    Height = 632
     Top = 42
     Width = 130
     Align = alLeft
     Caption = 'ListboxPanel'
-    ClientHeight = 636
+    ClientHeight = 632
     ClientWidth = 130
     TabOrder = 0
     object ThumbnailListBox: TListBox
@@ -168,7 +168,7 @@ object MainForm: TMainForm
       AnchorSideRight.Side = asrBottom
       AnchorSideBottom.Control = pagecountLabel
       Left = 1
-      Height = 615
+      Height = 609
       Top = 1
       Width = 128
       Anchors = [akTop, akLeft, akRight, akBottom]
@@ -189,8 +189,8 @@ object MainForm: TMainForm
     end
     object pagecountLabel: TLabel
       Left = 8
-      Height = 16
-      Top = 616
+      Height = 18
+      Top = 610
       Width = 5
       Anchors = [akLeft, akBottom]
       Caption = ' '
@@ -199,20 +199,22 @@ object MainForm: TMainForm
   end
   object Splitter1: TSplitter
     Left = 130
-    Height = 636
+    Height = 632
     Top = 42
     Width = 5
   end
   object OCRPanel: TPanel
     Left = 576
-    Height = 636
+    Height = 632
     Top = 42
     Width = 448
     Align = alRight
     Caption = 'OCRPanel'
-    ClientHeight = 636
+    ClientHeight = 632
     ClientWidth = 448
     TabOrder = 2
+    Visible = False
+    OnClick = ModeChange
     object CorrectionPanel: TPanel
       Left = 1
       Height = 149
@@ -246,15 +248,14 @@ object MainForm: TMainForm
     object Panel2: TPanel
       Left = 1
       Height = 65
-      Top = 570
+      Top = 566
       Width = 446
       Align = alBottom
-      Caption = 'Panel2'
       TabOrder = 1
     end
     object Panel3: TPanel
       Left = 1
-      Height = 420
+      Height = 416
       Top = 150
       Width = 446
       Align = alClient
@@ -264,7 +265,7 @@ object MainForm: TMainForm
   end
   object MainPanel: TPanel
     Left = 135
-    Height = 636
+    Height = 632
     Top = 42
     Width = 436
     Align = alClient
@@ -274,8 +275,8 @@ object MainForm: TMainForm
   end
   object StatusBar: TStatusBar
     Left = 0
-    Height = 19
-    Top = 678
+    Height = 21
+    Top = 674
     Width = 1024
     Panels = <    
       item
@@ -345,7 +346,6 @@ object MainForm: TMainForm
       Left = 503
       Top = 2
       Caption = 'ExportButton'
-      DropdownMenu = ExportModeMenu
       ImageIndex = 2
       OnClick = DjvuButtonClick
       Style = tbsDropDown
@@ -454,7 +454,7 @@ object MainForm: TMainForm
       TabOrder = 0
       object LanguageComboBox: TComboBox
         Left = 13
-        Height = 25
+        Height = 27
         Top = 6
         Width = 148
         ItemHeight = 0
@@ -469,11 +469,12 @@ object MainForm: TMainForm
   object Splitter2: TSplitter
     AnchorSideRight.Control = OCRPanel
     Left = 571
-    Height = 636
+    Height = 632
     Top = 42
     Width = 5
     Align = alRight
     ResizeAnchor = akRight
+    Visible = False
   end
   object OpenDialog: TOpenDialog
     Options = [ofFileMustExist, ofEnableSizing, ofViewDetail]
@@ -485,6 +486,10 @@ object MainForm: TMainForm
     top = 80
     object FileMenu: TMenuItem
       Caption = '&File'
+      object NewProjectMenuItem: TMenuItem
+        Caption = 'New'
+        OnClick = NewProjectMenuItemClick
+      end
       object OpenProjectMenuItem: TMenuItem
         Caption = 'Open'
         OnClick = OpenProjectMenuItemClick
@@ -496,9 +501,11 @@ object MainForm: TMainForm
         Caption = 'Save As ...'
         OnClick = SaveAsMenuItemClick
       end
+      object MenuItem4: TMenuItem
+        Caption = '-'
+      end
       object ImportMenuItem: TMenuItem
         Caption = 'Import ...'
-        Visible = False
         OnClick = ImportMenuItemClick
       end
       object MenuItem3: TMenuItem
@@ -514,6 +521,24 @@ object MainForm: TMainForm
       object ExitMenuItem: TMenuItem
         Caption = 'Exit'
         OnClick = ExitMenuItemClick
+      end
+    end
+    object ModeMenuItem: TMenuItem
+      Caption = 'Mode'
+      object ProcessPageMenuItem: TMenuItem
+        AutoCheck = True
+        Caption = 'Process page'
+        Checked = True
+        GroupIndex = 1
+        RadioItem = True
+        OnClick = ModeChange
+      end
+      object OCRScreenMenuItem: TMenuItem
+        AutoCheck = True
+        Caption = 'OCR'
+        GroupIndex = 1
+        RadioItem = True
+        OnClick = ModeChange
       end
     end
     object PageMenu: TMenuItem
