--- a/trunk/MainUI.lfm
+++ b/trunk/MainUI.lfm
@@ -1,11 +1,11 @@
 object MainForm: TMainForm
   Left = 20
   Height = 722
-  Top = 150
+  Top = 80
   Width = 1024
   ActiveControl = ListboxPanel
   Caption = 'Ocrivist'
-  ClientHeight = 695
+  ClientHeight = 697
   ClientWidth = 1024
   Icon.Data = {
     BE1000000000010001002020000001002000A810000016000000280000002000
@@ -153,12 +153,12 @@ object MainForm: TMainForm
   WindowState = wsMaximized
   object ListboxPanel: TPanel
     Left = 0
-    Height = 632
+    Height = 636
     Top = 42
     Width = 130
     Align = alLeft
     Caption = 'ListboxPanel'
-    ClientHeight = 632
+    ClientHeight = 636
     ClientWidth = 130
     TabOrder = 1
     object ThumbnailListBox: TListBox
@@ -168,7 +168,7 @@ object MainForm: TMainForm
       AnchorSideRight.Side = asrBottom
       AnchorSideBottom.Control = pagecountLabel
       Left = 1
-      Height = 609
+      Height = 615
       Top = 1
       Width = 128
       Anchors = [akTop, akLeft, akRight, akBottom]
@@ -189,8 +189,8 @@ object MainForm: TMainForm
     end
     object pagecountLabel: TLabel
       Left = 8
-      Height = 18
-      Top = 610
+      Height = 16
+      Top = 616
       Width = 5
       Anchors = [akLeft, akBottom]
       Caption = ' '
@@ -199,18 +199,18 @@ object MainForm: TMainForm
   end
   object Splitter1: TSplitter
     Left = 130
-    Height = 632
+    Height = 636
     Top = 42
     Width = 5
   end
   object OCRPanel: TPanel
     Left = 576
-    Height = 632
+    Height = 636
     Top = 42
     Width = 448
     Align = alRight
     Caption = 'OCRPanel'
-    ClientHeight = 632
+    ClientHeight = 636
     ClientWidth = 448
     TabOrder = 4
     Visible = False
@@ -248,14 +248,14 @@ object MainForm: TMainForm
     object Panel2: TPanel
       Left = 1
       Height = 65
-      Top = 566
+      Top = 570
       Width = 446
       Align = alBottom
       TabOrder = 1
     end
     object Panel3: TPanel
       Left = 1
-      Height = 374
+      Height = 378
       Top = 192
       Width = 446
       Align = alClient
@@ -288,13 +288,13 @@ object MainForm: TMainForm
   end
   object MainPanel: TPanel
     Left = 135
-    Height = 632
+    Height = 636
     Top = 42
     Width = 436
     Align = alClient
     AutoSize = True
     Caption = 'MainPanel'
-    ClientHeight = 632
+    ClientHeight = 636
     ClientWidth = 436
     TabOrder = 3
     object PageToolBar: TToolBar
@@ -402,8 +402,8 @@ object MainForm: TMainForm
   end
   object StatusBar: TStatusBar
     Left = 0
-    Height = 21
-    Top = 674
+    Height = 19
+    Top = 678
     Width = 1024
     Panels = <    
       item
@@ -491,14 +491,16 @@ object MainForm: TMainForm
       TabOrder = 0
       object LanguageComboBox: TComboBox
         Left = 13
-        Height = 27
+        Height = 25
         Top = 6
         Width = 148
+        DropDownCount = 12
         ItemHeight = 0
         Items.Strings = (
           ''
         )
         OnChange = LanguageComboBoxChange
+        Style = csDropDownList
         TabOrder = 0
       end
     end
@@ -506,7 +508,7 @@ object MainForm: TMainForm
   object Splitter2: TSplitter
     AnchorSideRight.Control = OCRPanel
     Left = 571
-    Height = 632
+    Height = 636
     Top = 42
     Width = 5
     Align = alRight
@@ -524,32 +526,32 @@ object MainForm: TMainForm
     object FileMenu: TMenuItem
       Caption = '&File'
       object NewProjectMenuItem: TMenuItem
-        Caption = 'New'
+        Caption = '&New'
         OnClick = NewProjectMenuItemClick
       end
       object OpenProjectMenuItem: TMenuItem
-        Caption = 'Open'
+        Caption = '&Open'
         OnClick = OpenProjectMenuItemClick
       end
       object SaveProjectMenuItem: TMenuItem
-        Caption = 'Save'
+        Caption = '&Save'
       end
       object SaveAsMenuItem: TMenuItem
-        Caption = 'Save As ...'
+        Caption = 'Save &As ...'
         OnClick = SaveAsMenuItemClick
       end
       object MenuItem4: TMenuItem
         Caption = '-'
       end
       object ImportMenuItem: TMenuItem
-        Caption = 'Import ...'
+        Caption = '&Import ...'
         OnClick = ImportMenuItemClick
       end
       object MenuItem3: TMenuItem
         Caption = '-'
       end
       object SetScannerMenuItem: TMenuItem
-        Caption = 'Select Scanner'
+        Caption = 'Select Scanne&r'
         OnClick = SetScannerMenuItemClick
       end
       object MenuItem2: TMenuItem
@@ -561,7 +563,7 @@ object MainForm: TMainForm
       end
     end
     object ModeMenuItem: TMenuItem
-      Caption = 'Mode'
+      Caption = '&Mode'
       object ProcessPageMenuItem: TMenuItem
         AutoCheck = True
         Caption = 'Process page'
@@ -652,21 +654,21 @@ object MainForm: TMainForm
       end
     end
     object OCRMenu: TMenuItem
-      Caption = 'OCR'
+      Caption = '&OCR'
       object miAnalysePage: TMenuItem
-        Caption = 'Analyse page'
+        Caption = '&Analyse page'
         OnClick = AnalyseButtonClick
       end
       object miReadPage: TMenuItem
-        Caption = 'Read page'
+        Caption = '&Read page'
         OnClick = TestTesseractButtonClick
       end
       object miAutoProcessPage: TMenuItem
-        Caption = 'Autoprocess page'
+        Caption = 'Auto&process page'
         OnClick = miAutoProcessPageClick
       end
       object miAutoAll: TMenuItem
-        Caption = 'Autoprocess all'
+        Caption = 'Autoprocess a&ll'
         OnClick = miAutoAllClick
       end
     end
